fix: replace toList() with Collectors.toList() and for-loop to fix Railway deploy